# mlops-tutorial

./: app.py  application.py  pyproject.toml  requirements.txt
.ebextensions/: python.config
catboost_info/: catboost_training.json  time_left.tsv
catboost_info/learn/: events.out.tfevents
notebook/: 2. MODEL TRAINING.ipynb
obsolete/: setup-explanation.md  setup.py
src/: logger.py  utils.py
src/components/: data_ingestion.py  data_transformation.py  model_trainer.py
src/pipeline/: predict_pipeline.py
